# hackathon

./: .gitignore  README.md  common.mk  common_app.mk
docs/: c_to_ui_label_updates.md  room_scheduling_system.md
hackathon_template/: .mtb-prefs.json  common.mk
hackathon_template/proj_cm33_ns/: project_info.json
hackathon_template/proj_cm33_s/: project_info.json
hackathon_template/proj_cm55/: Makefile  app_events.c  app_events.h  main.c  retarget_io_init.h
hackathon_template/proj_cm55/ui/: CMakeLists.txt  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
hackathon_template/proj_cm55/ui/components/: ui_comp_hook.c
hackathon_template/proj_cm55/ui/fonts/: ui_font_SS3.c  ui_font_SS48.c  ui_font_SS52.c
hackathon_template/proj_cm55/ui/images/: ui_img_bg11_png.c  ui_img_soundd_png.c
hackathon_template/proj_cm55/ui/screens/: ui_Audio.c  ui_Audio.h  ui_Graphics.c  ui_Graphics.h  ui_Voice.h
hackui/: hui.sll  hui.slp  hui.spj  project.info
hackui/assets/: ui_font_Font1.c  ui_font_Font1.fcfg  ui_font_SS3.fcfg  ui_font_SS48.fcfg  ui_font_SS52.fcfg
hackui/components/: backbutton.ecomp
mtb_shared/: .cproject
proj_cm33_ns/: main.c
proj_cm55/: FreeRTOSConfig.h  Makefile  app_events.c  app_events.h  lv_conf.h  project_info.json  retarget_io_init.c  room_scheduler.c  room_scheduler.h
proj_cm55/COMPONENT_Audio/: app_i2s.c  audio_playback.c  playback_config.h
proj_cm55/COMPONENT_Graphics/: graphics_init.c  lv_draw_vg_lite_img.c  lv_port_indev.c
proj_cm55/COMPONENT_Voice/: voice_assistant.c  voice_control.c  voice_init.c
proj_cm55/oldui/: ui.c  (+6 more)
(+235 files in other folders)
